--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="my_profile">My Profile</string>
     <string name="events">Events</string>
     <string name="campusambassador">Campus Ambassador</string>
-    <string name="schedule">Schedule</string>
+    <string name="schedule">Timeline</string>
     <string name="sign_up_label">Sign Up</string>
     <string name="multicity">Multicity Auditions</string>
     <string name="log_in_label">Log In</string>
